feat(testimonies): integrar persistencia JPA y optimizar conexion a Supabase
- Se actualiza el servicio para obtener el historial y gestionar las descargas consumiendo directamente la entidad Testimony de JPA.
- Se implementa el enum ResourceType para tipar y validar de forma estricta las solicitudes de archivos (AUDIO, ORIGINAL, MODIFIED).
- Se corrige el error de Hibernate 42P05 (prepared statement already exists) configurando Hikari para usar el modo de consulta simple requerido por el pool de Supabase.